--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
 
     implementation "com.google.android.material:material:1.2.0-alpha04"
+    implementation 'com.google.android.material:material:1.1.0'
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
