--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,11 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     implementation "com.google.android.material:material:1.2.0-alpha04"
     implementation 'com.google.android.material:material:1.1.0'
